fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ h3.hero-info{
 
 .about .container {
   padding-top: 80px;
-  padding-bottom: 200px;
+  padding-bottom: 80px;
 }
 
 .schedule .container,
